--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </div>
             <p class="home_description">
               Passionate about AI and ML 🔥<br>
-              Loves listening🎧 Lex Fridman's podcast🎙
+              A regular listener 🎧 of Lex Fridman's & JRE 🎙<br>
               #Learn💻 #Build🛠 #Grow🚀
             </p>
             <a href="index.html#contactme" class="button button--flex">
