updated portfolio content-v3.0

--- a/index.html
+++ b/index.html
@@ -1199,31 +1199,6 @@
           </div>
 
 
-          <!--==================== PROJECT 9 ====================-->
-          <!-- <div class="portfolio_content grid swiper-slide">
-            <img src="assets/img/portfolio/portfolio_5.jpg" class="portfolio_img" alt="">
-
-            <div class="portfolio_data">
-              <h3 class="portfolio_title">Weather App 🌦️</h3>
-              <p class="portfolio_description">
-                A responsive weather web app which automatically loads weather stats based on your location using
-                real-time API.
-                Made using HTML, CSS, JavaScript and Bootstrap.
-                <br /><br>
-                View Source Code -> <a href="https://github.com/aman-chhetri/weather-app"
-                    target="_blank">
-                    HERE!</a>
-              </p>
-
-              <a href="https://checkweather-v1.netlify.app/" target="_blank"
-                class="button button--flex button--small portfolio_button">
-                Demo
-                <i class="uil uil-arrow-right button_icon"></i>
-              </a>
-            </div>
-          </div> -->
-
-
         </div>
 
         <!-- Add Arrows -->
@@ -1247,18 +1222,42 @@
 
       <div class="achievements_container container swiper-container">
         <div class="swiper-wrapper">
+
+
           <!--==================== ACHIEVEMENT-1 ====================-->
           <div class="achievements_content grid swiper-slide">
-            <img src="assets/img/achievements/achievements_1.jpg" class="achievements_img" alt="">
+            <img src="assets/img/achievements/aws.png" class="achievements_img" alt="">
 
             <div class="achievements_data">
-              <h3 class="achievements_title">Z3R0 - Capture the Flag 🚩
+              <h3 class="achievements_title">AWS AI & ML Scholarship Program
               </h3>
               <p class="achievements_description">
-                <b>Status: 1st Runner up</b>
+                <u>Status</u>: Awarded a valuable sponsorship worth USD 4,000 🎖️
+              <p class="achievements_description">
+                <u>Organized by</u>: Amazon | Udacity
+                <br /><br>
+
+                <a href="https://www.linkedin.com/in/amankshetri/details/honors/"
+                  target="_blank" class="button button--flex button--small achievements_button">
+                  View
+                  <i class="uil uil-arrow-right button_icon"></i>
+                </a>
+            </div>
+          </div>
+
+
+          <!--==================== ACHIEVEMENT-2 ====================-->
+          <div class="achievements_content grid swiper-slide">
+            <img src="assets/img/achievements/arcade.png" class="achievements_img" alt="">
+
+            <div class="achievements_data">
+              <h3 class="achievements_title">Google Cloud Arcade Recipient
+              </h3>
+              <p class="achievements_description">
+                <u>Status</u>: Winner 🏆
                 <br />
               <p class="achievements_description">
-                <b>Organized by: Tantrotsav '23 - AVV Chennai</b>
+                <u>Organized by</u>: Google
                 <br /><br>
 
                 <a href="https://www.linkedin.com/posts/amankshetri_ctf-cybersecurity-event-activity-7049332196364492800-azE_?utm_source=share&utm_medium=member_desktop"
@@ -1269,19 +1268,41 @@
             </div>
           </div>
 
-          <!--===================== ACHIEVEMENT-2 ====================-->
+          <!--==================== ACHIEVEMENT-3 ====================-->
           <div class="achievements_content grid swiper-slide">
-            <img src="assets/img/achievements/achievements_2.jpg" class="achievements_img" alt="">
+            <img src="assets/img/achievements/tantrotsav.jpg" class="achievements_img" alt="">
 
             <div class="achievements_data">
-              <h3 class="achievements_title">Cepheus - Capture the Flag 🚩
+              <h3 class="achievements_title">Z3R0- Capture the Flag 🚩
               </h3>
               <p class="achievements_description">
-                <b>Status: 2nd Runner up</b>
+                <u>Status</u>: 1st Runner up 🥈
                 <br />
               <p class="achievements_description">
-                <b>Organized by: Cepheus'23 - IIT Goa
-                </b>
+                <u>Organized by</u>: Tantrotsav '23 - AVV Chennai
+                <br /><br>
+
+                <a href="https://www.linkedin.com/posts/amankshetri_ctf-cybersecurity-event-activity-7049332196364492800-azE_?utm_source=share&utm_medium=member_desktop"
+                  target="_blank" class="button button--flex button--small achievements_button">
+                  View
+                  <i class="uil uil-arrow-right button_icon"></i>
+                </a>
+            </div>
+          </div>
+
+          <!--===================== ACHIEVEMENT-4 ====================-->
+          <div class="achievements_content grid swiper-slide">
+            <img src="assets/img/achievements/cepheus.jpg" class="achievements_img" alt="">
+
+            <div class="achievements_data">
+              <h3 class="achievements_title">Cepheus- Capture the Flag 🚩
+              </h3>
+              <p class="achievements_description">
+                <u>Status</u>: 2nd Runner up 🥉
+                <br />
+              <p class="achievements_description">
+                <u>Organized by</u>: Cepheus'23 - IIT Goa
+                
                 <br /><br>
 
                 <a href="https://www.linkedin.com/posts/amankshetri_ctf-cybersecurity-event-activity-7039531192328593409-k-Lj?utm_source=share&utm_medium=member_desktop"
@@ -1292,18 +1313,18 @@
             </div>
           </div>
 
-          <!--===================== ACHIEVEMENT-3 ====================-->
+          <!--===================== ACHIEVEMENT-5 ====================-->
           <div class="achievements_content grid swiper-slide">
-            <img src="assets/img/achievements/achievements_3.jpg" class="achievements_img" alt="">
+            <img src="assets/img/achievements/ui_timate.jpg" class="achievements_img" alt="">
 
             <div class="achievements_data">
-              <h3 class="achievements_title">Ui-timate - UI Design Challenge 🎨
+              <h3 class="achievements_title">Ui-timate: UI Design Challenge 🎨
               </h3>
               <p class="achievements_description">
-                <b>Status: Winner</b>
+                <u>Status</u>: Winner 🏆
                 <br />
               <p class="achievements_description">
-                <b>Organized by: Cognizance Amrita</b>
+                <u>Organized by</u>: Cognizance Amrita
                 <br /><br>
 
                 <a href="https://www.linkedin.com/posts/cognizance-amrita_devpost-uiux-designing-activity-7063075636893929473-DtZw?utm_source=share&utm_medium=member_desktop"
@@ -1314,18 +1335,18 @@
             </div>
           </div>
 
-          <!--===================== ACHIEVEMENT-4 ====================-->
+          <!--===================== ACHIEVEMENT-6 ====================-->
           <div class="achievements_content grid swiper-slide">
-            <img src="assets/img/achievements/achievements_4.jpg" class="achievements_img" alt="">
+            <img src="assets/img/achievements/cybersprint.jpg" class="achievements_img" alt="">
 
             <div class="achievements_data">
               <h3 class="achievements_title">CyberSprint CTF 🚩
               </h3>
               <p class="achievements_description">
-                <b>Status: 1st Runner Up</b>
+                <u>Status</u>: 1st Runner Up 🥈
                 <br />
               <p class="achievements_description">
-                <b>Organized by: Google Developers Club, TSEC</b>
+                <u>Organized by</u>: Google Developers Club, TSEC
                 <br /><br>
 
                 <a href="https://www.linkedin.com/posts/cognizance-amrita_amritavishwavidyapeetham-chennaicampus-ctf-activity-7054872454141272064-gvJQ?utm_source=share&utm_medium=member_desktop"
@@ -1336,21 +1357,22 @@
             </div>
           </div>
 
-          <!--===================== ACHIEVEMENT-5 ====================-->
+
+          <!--===================== ACHIEVEMENT-7 ====================-->
           <div class="achievements_content grid swiper-slide">
-            <img src="assets/img/achievements/achievements_5.jpg" class="achievements_img" alt="">
+            <img src="assets/img/achievements/machine_learning.jpg" class="achievements_img" alt="">
 
             <div class="achievements_data">
-              <h3 class="achievements_title">AWS Academy Cloud Foundations ☁️
+              <h3 class="achievements_title">Machine Learning Specialization
               </h3>
               <p class="achievements_description">
-                <b>Status: Completed 💯</b>
+                <u>Status</u>: Completed ✅
                 <br />
               <p class="achievements_description">
-                <b>Organized by: AWS - Amazon Web Services</b>
+              <u>Organized by</u>: Stanford | Coursera
                 <br /><br>
 
-                <a href="https://www.linkedin.com/posts/amankshetri_aman-kshetri-aws-academy-cloud-foundations-activity-7154718330245779456-_gEG?utm_source=share&utm_medium=member_desktop"
+                <a href="https://www.coursera.org/account/accomplishments/specialization/BM8LF975EDQX"
                   target="_blank" class="button button--flex button--small achievements_button">
                   View
                   <i class="uil uil-arrow-right button_icon"></i>
@@ -1358,18 +1380,19 @@
             </div>
           </div>
 
-          <!--===================== ACHIEVEMENT-6 ====================-->
+
+          <!--===================== ACHIEVEMENT-8 ====================-->
           <div class="achievements_content grid swiper-slide">
-            <img src="assets/img/achievements/achievements_6.jpg" class="achievements_img" alt="">
+            <img src="assets/img/achievements/front_end.jpg" class="achievements_img" alt="">
 
             <div class="achievements_data">
-              <h3 class="achievements_title">Front End Developement Libraries
+              <h3 class="achievements_title">Front-End Developement Libraries
               </h3>
               <p class="achievements_description">
-                <b>Status: Completed 💯</b>
+                <u>Status</u>: Completed ✅
                 <br />
               <p class="achievements_description">
-                <b>Organized by: freeCodeCamp</b>
+                <u>Organized by</u>: freeCodeCamp
                 <br /><br>
 
                 <a href="https://www.linkedin.com/posts/amankshetri_freecodecamp-frontend-webdevelopment-activity-7093940549295964160-HG4q?utm_source=share&utm_medium=member_desktop"
@@ -1380,18 +1403,41 @@
             </div>
           </div>
 
-          <!--===================== ACHIEVEMENT-7 ====================-->
+
+          <!--===================== ACHIEVEMENT-9 ====================-->
           <div class="achievements_content grid swiper-slide">
-            <img src="assets/img/achievements/achievements_7.jpg" class="achievements_img" alt="">
+            <img src="assets/img/achievements/cloud.jpg" class="achievements_img" alt="">
+
+            <div class="achievements_data">
+              <h3 class="achievements_title">AWS Academy Cloud Foundations ☁️
+              </h3>
+              <p class="achievements_description">
+                <u>Status</u>: Completed ✅
+                <br />
+              <p class="achievements_description">
+                <u>Organized by</u>: AWS (Amazon Web Services)
+                <br /><br>
+
+                <a href="https://www.linkedin.com/posts/amankshetri_aman-kshetri-aws-academy-cloud-foundations-activity-7154718330245779456-_gEG?utm_source=share&utm_medium=member_desktop"
+                  target="_blank" class="button button--flex button--small achievements_button">
+                  View
+                  <i class="uil uil-arrow-right button_icon"></i>
+                </a>
+            </div>
+          </div>
+
+          <!--===================== ACHIEVEMENT-10 ====================-->
+          <div class="achievements_content grid swiper-slide">
+            <img src="assets/img/achievements/hacktoberfest.png" class="achievements_img" alt="">
 
             <div class="achievements_data">
               <h3 class="achievements_title">Hactoberfest Swags 🖼️
               </h3>
               <p class="achievements_description">
-                <b>Status: Contributed 💯</b>
+                <u>Status</u>: Contributed 💯
                 <br />
               <p class="achievements_description">
-                <b>Organized by: Github, AppWrite, Digital Ocean</b>
+                <u>Organized by</u>: Github | AppWrite | Digital Ocean
                 <br /><br>
 
                 <a href="https://holopin.io/@aman_chhetri" target="_blank"
@@ -1402,18 +1448,18 @@
             </div>
           </div>
 
-          <!--===================== ACHIEVEMENT-8 ====================-->
+          <!--===================== ACHIEVEMENT-11 ====================-->
           <div class="achievements_content grid swiper-slide">
-            <img src="assets/img/achievements/achievements_8.jpg" class="achievements_img" alt="">
+            <img src="assets/img/achievements/technical_support.jpg" class="achievements_img" alt="">
 
             <div class="achievements_data">
               <h3 class="achievements_title">Technical Support Fundamentals ⚙️
               </h3>
               <p class="achievements_description">
-                <b>Status: Completed 💯</b>
+                <u>Status</u>: Completed ✅
                 <br />
               <p class="achievements_description">
-                <b>Organized by: Google</b>
+                <u>Organized by</u>: Google
                 <br /><br>
 
                 <a href="https://www.coursera.org/account/accomplishments/certificate/AUBXZTL9Q54S" target="_blank"
@@ -1424,18 +1470,18 @@
             </div>
           </div>
 
-          <!--===================== ACHIEVEMENT-9 ====================-->
+          <!--===================== ACHIEVEMENT-12 ====================-->
           <div class="achievements_content grid swiper-slide">
-            <img src="assets/img/achievements/achievements_9.jpg" class="achievements_img" alt="">
+            <img src="assets/img/achievements/microsoft_learn.jpg" class="achievements_img" alt="">
 
             <div class="achievements_data">
               <h3 class="achievements_title">Microsoft Learn AI Skills Challenge 📖
               </h3>
               <p class="achievements_description">
-                <b>Status: Completed 💯</b>
+                <u>Status</u>: Completed ✅
                 <br />
               <p class="achievements_description">
-                <b>Organized by: Microsoft</b>
+                <u>Organized by</u>: Microsoft
                 <br /><br>
 
                 <a href="https://www.microsoft.com/en-us/cloudskillschallenge/ai/registration/2023?ocid=aisc23_CSC_skillsforaiblog_cnl" target="_blank"
@@ -1510,7 +1556,7 @@
             <div>
               <h3 class="contact_title">Location</h3>
               <span class="contact_subtitle">
-              <a href="https://goo.gl/maps/gVLCopweeZz8QTaF9" class="telegram" target="_blank">
+              <a href="#contact" class="telegram">
                 NP | IND
               </a>
               </span>
