updated Blog section!

--- a/index.html
+++ b/index.html
@@ -1399,7 +1399,7 @@
         <img src="assets/img/MiniEmojisGoogle/thinkingMe.webp" class="myEmoji" alt="">
       </h2>
       <h2 class="section_title">Blogs</h2>
-      <span class="section_subtitle">I am interested in AI and Machine Learning and also likes doing Web Development
+      <span class="section_subtitle">I ocasionally write blogs on AI, ML, and other tech stuffs. You can check them out here!
       </span>
 
       <div class="interests_container container grid">
