added experience and new projects ✅

--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
             <div class="qualification_data">
               <div>
                 <h3 class="qualification_title">Community Mentor</h3>
-                <span class="qualification_subtitle">Bolt.new</span>
+                <span class="qualification_subtitle">[Bolt.new]</span>
                 <div class="qualification_calendar">
                   <i class="uil uil-calendar-alt"></i>
                   May 2025 - Present
@@ -882,7 +882,7 @@
               </div>
               <div>
                 <h3 class="qualification_title">Research Intern</h3>
-                <span class="qualification_subtitle">UIUC [University of Illinois Urbana-Champaign]</span>
+                <span class="qualification_subtitle">[UIUC - University of Illinois Urbana-Champaign]</span>
                 <div class="qualification_calendar">
                   <i class="uil uil-calendar-alt"></i>
                   Apr 2025 - Present
@@ -896,7 +896,7 @@
               <div class="qualification_data">
               <div>
                 <h3 class="qualification_title">Student Mentor</h3>
-                <span class="qualification_subtitle">Cognizance Amrita</span>
+                <span class="qualification_subtitle">[Cognizance Amrita]</span>
                 <div class="qualification_calendar">
                   <i class="uil uil-calendar-alt"></i>
                   Apr 2023 - Aug 2024
